fix(#900): Add missing aria-labels Add hasOverflowScroll to pageSections in JMX and Quartz.
(cherry picked from commit 4f57205a76b5f3f5d3f5288d7ada6aab53fe07d5)

--- a/packages/hawtio/src/plugins/quartz/QuartzContent.css
+++ b/packages/hawtio/src/plugins/quartz/QuartzContent.css
@@ -1,3 +1,7 @@
 #quartz-content-main > article {
   overflow: auto;
 }
+
+#quartz-content {
+  height: 100%;
+}
